--- a/felayout_t3kit/dev/styles/main/header/header.less
+++ b/felayout_t3kit/dev/styles/main/header/header.less
@@ -852,6 +852,7 @@
         opacity: 1;
         -webkit-transform: translate3d(0, 0, 0);
         transform: translate3d(0, 0, 0);
+        z-index: 3000;
     }
 
     .touch .main-navigation__item._sub .main-navigation__open-sub-menu-link:before {
